--- a/.eslintrc
+++ b/.eslintrc
@@ -20,11 +20,9 @@
       "jsx": true
     },
     "ecmaVersion": "latest",
-		"sourceType": "module"
+    "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint", "react", "prettier", "react-hooks"
-  ],
+  "plugins": ["@typescript-eslint", "react", "prettier", "react-hooks"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
@@ -43,10 +41,10 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off"
   },
-	"settings": {
-		"react": {
-			"pragma": "React",
-			"version": "detect"
-		}
-	}
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  }
 }
