--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": "./src",
-    "resolveJsonModule": true
+    "baseUrl": ".",
+    "resolveJsonModule": true,
+    "paths": {
+      "src/*": ["src/*"]
+    },
+
   },
   "include": ["./src/**/*", "styled.d.ts"]
 }
