--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
     "eslint": "^8.14.0",
+    "eslint-config-htmlacademy": "^5.1.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
@@ -41,7 +42,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2",
-    "eslint-config-htmlacademy": "^5.1.2"
+    "vitest-fetch-mock": "^0.2.2"
   },
   "eslintConfig": {
     "extends": [
