--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "^12.4.1",
     "msw": "^1.1.0",
     "prettier": "^2.6.2",
+    "react-hook-form": "^7.43.8",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
