--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint:fix": "eslint --ext .tsx --ext .ts src/ --fix"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
