feat: add scroll lock

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "lint-staged": "^12.4.1",
     "msw": "^1.1.0",
     "prettier": "^2.6.2",
+    "react-focus-lock": "^2.9.4",
     "react-hook-form": "^7.43.8",
+    "react-remove-scroll": "^2.5.5",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
