--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
+    "sirv": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
@@ -28,6 +31,9 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+        "@types/express": "^4.17.16",
+            "@types/node": "^18.11.12",
+                "cross-env": "^7.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
     "eslint": "^8.14.0",
