--- a/package.json
+++ b/package.json
@@ -4,38 +4,40 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node server",
     "build": "tsc && vite build",
-    "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "eslint": "eslint --ext .tsx --ext .ts src/",
-    "eslint:fix": "eslint --ext .tsx --ext .ts src/ --fix"
+    "eslint:fix": "eslint --ext .tsx --ext .ts src/ --fix",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/user-event": "^14.4.3",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "compression": "^1.7.4",
-    "express": "^4.18.2",
     "sirv": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/express": "^4.17.16",
+    "@types/node": "^18.11.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-        "@types/express": "^4.17.16",
-            "@types/node": "^18.11.12",
-                "cross-env": "^7.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.14.0",
     "eslint-config-htmlacademy": "^5.1.2",
     "eslint-config-prettier": "^8.5.0",
@@ -48,6 +50,7 @@
     "jsdom": "^21.1.0",
     "lint-staged": "^12.4.1",
     "msw": "^1.1.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.6.2",
     "react-focus-lock": "^2.9.4",
     "react-hook-form": "^7.43.8",
