--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node server",
+    "start": "vite",
     "build": "tsc && vite build",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -12,7 +13,13 @@
     "eslint:fix": "eslint --ext .tsx --ext .ts src/ --fix",
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "preview": "cross-env NODE_ENV=production node server"
+    "preview": "cross-env NODE_ENV=production node server",
+    "cy:open": "cypress open",
+    "cy:open-e2e": "cypress open --e2e --browser chrome",
+    "cy:open-unit": "cypress open --component --browser chrome",
+    "cy:run-e2e": "cypress run --e2e",
+    "cy:run-unit": "cypress run --component",
+    "cy:e2e": "start-server-and-test start http-get://localhost:5173 cy:open-e2e"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
@@ -27,6 +34,8 @@
     "sirv": "^2.0.2"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
+    "@cypress/react18": "^2.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.12",
@@ -38,6 +47,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
     "cross-env": "^7.0.3",
+    "cypress": "^12.10.0",
     "eslint": "^8.14.0",
     "eslint-config-htmlacademy": "^5.1.2",
     "eslint-config-prettier": "^8.5.0",
@@ -56,8 +66,10 @@
     "react-hook-form": "^7.43.8",
     "react-remove-scroll": "^2.5.5",
     "sass": "^1.58.3",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.29.2",
     "vitest-fetch-mock": "^0.2.2"
   },
