--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "preview": "cross-env NODE_ENV=production node server",
+    "cy:coverage": "npx nyc report --reporter=text-summary",
     "cy:open": "cypress open",
     "cy:open-e2e": "cypress open --e2e --browser chrome",
     "cy:open-unit": "cypress open --component --browser chrome",
@@ -36,9 +37,10 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.4",
     "@cypress/react18": "^2.0.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@testing-library/react": "^14.0.0",
     "@types/express": "^4.17.16",
-    "@types/node": "^18.11.12",
+    "@types/node": "^18.16.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
